--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "author": "Stefan Jevtic",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.3.1",
+    "apollo-server-koa": "^2.4.6",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "graphql": "^14.2.0",
     "koa": "^2.7.0",
     "koa-static": "^5.0.0",
+    "mysql2": "^1.6.5",
     "react": "^16.8.5",
+    "react-apollo": "^2.5.3",
     "react-dom": "^16.8.5",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "sequelize": "^5.2.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
