--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets": [
-      "@babel/preset-env", "@babel/react"
+      "@babel/preset-env", 
+      "@babel/react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
     ]
 }
