--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mysql2": "^1.6.5",
     "react": "^16.8.5",
