--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^1.6.5",
     "react": "^16.8.5",
     "react-apollo": "^2.5.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
     "sequelize": "^5.2.3"
