--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-helmet": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "mysql2": "^1.6.5",
     "react": "^16.8.5",
