--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-loader": "8.0.4",
     "css-loader": "^2.1.1",
     "nodemon": "^1.18.10",
+    "prettier": "1.16.4",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
