--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "apollo-server-koa": "^2.4.6",
+    "babel-plugin-dotenv": "^0.1.1",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.0",
